--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,13 @@ main {
     position: relative;
 }
 
+/* Reasons section */
+#reasons {
+    margin: 20px auto;
+    font-size: 280%;
+    text-align: center;
+}
+
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, .7);
