--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,9 +104,18 @@ main {
 
 /* Reasons section */
 #reasons {
+    width: 90%;
     margin: 20px auto;
-    font-size: 280%;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
     text-align: center;
+    font-size: 280%;
+}
+#benefits-physical>div, #benefits-mental>div {
+    line-height: 20px;
+    margin-bottom: 20px;
 }
 
 #cover-text {
@@ -125,9 +134,13 @@ main {
     color: #ffffff;
 }
 
-#benefits > p {
-    padding-left: 20px;
-    padding-right: 20px;
+#benefits p {
+    padding: 0 20px;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
 }
 
 /* Footer */
