--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,22 +102,6 @@ main {
     position: relative;
 }
 
-/* Reasons section */
-#reasons {
-    width: 90%;
-    margin: 20px auto;
-}
-
-#reasons h2 {
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 280%;
-}
-#benefits-physical>div, #benefits-mental>div {
-    line-height: 20px;
-    margin-bottom: 20px;
-}
-
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, .7);
@@ -134,6 +118,23 @@ main {
     color: #ffffff;
 }
 
+/* Reasons section */
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+#benefits-physical > div,
+#benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
 #benefits p {
     padding: 0 20px;
 }
@@ -144,7 +145,7 @@ hr {
 }
 
 #circle-cover-bg {
-    background: url("../images/reasons-image.webp") no-repeat top center/cover;
+    background: url("../images/reasons-image.webp") no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
@@ -152,6 +153,11 @@ hr {
     border-radius: 50%;
     max-width: 300px;
     max-height: 300px;
+}
+#benefits-mage {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Footer */
