--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,12 @@ main {
     justify-content: center;
 }
 
-
+#times {
+    background: url('../images/dublin-city.webp') no-repeat center / cover;
+    /* Handles responsivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
+}
 
 /* Footer */
 #social-networks {
