--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,6 +255,7 @@ main {
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
+        display: flex column;
     }
 
     /* Hero */
@@ -284,6 +285,24 @@ main {
     /* Gallery */
     #photos {
         column-count: 3;
+    }
+
+    /* Signup Section */
+    #signup {
+        background-size: cover;
+        background-position: 75%;
+        flex-grow: 1;
+        padding: 0;
+    }
+
+    #signup h2 {
+        color: #fafafa;
+    }
+
+    #signup-form {
+        color: #ffffff;
+        background-color: rgba(60, 60, 60, 0.6);
+        padding: 30px;
     }
 }
 
