--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,8 @@ main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero section */
@@ -189,6 +191,52 @@ main {
     color: #fafafa;
 }
 
+/* Signup Section */
+#signup {
+    background-image: url("../images/signup-image.webp");
+    background-size: cover;
+    background-position: 75%;
+    flex-grow: 1;
+    padding: 20px 10% 0 10%;
+}
+
+#signup h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    background-color: #454b1b;
+    color: #fafafa;
+    font-size: 100%;
+    padding: 15px 32px;
+}
+
 /* Gallery Page */
 #photos img {
     width: 100%;
@@ -251,11 +299,20 @@ main {
         margin: 0 0.5rem;
     }
 
+    /* Sign-up form */
+    #signup {
+        background-position: cover;
+        position: left;
+    }
+    #signup-form {
+        position: absolute;
+        max-width: 400px;
+    }
+
     /* Main content */
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
-        display: flex column;
     }
 
     /* Hero */
@@ -287,23 +344,6 @@ main {
         column-count: 3;
     }
 
-    /* Signup Section */
-    #signup {
-        background-size: cover;
-        background-position: 75%;
-        flex-grow: 1;
-        padding: 0;
-    }
-
-    #signup h2 {
-        color: #fafafa;
-    }
-
-    #signup-form {
-        color: #ffffff;
-        background-color: rgba(60, 60, 60, 0.6);
-        padding: 30px;
-    }
 }
 
 /* Large devices (laptops and desktops 992px and up) */
