<corrected background feature misuse for sign up form>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -301,8 +301,8 @@ main {
 
     /* Sign-up form */
     #signup {
-        background-position: cover;
-        position: left;
+        background-position: center;
+        position: relative;
     }
     #signup-form {
         position: absolute;
